--- a/subIndex/exercise.html
+++ b/subIndex/exercise.html
@@ -45,6 +45,8 @@
 								<li><a href="#ananya">Pushups</a></li>
 								<li><a href="#virat">Weight Lifting </a></li>
 								<li><a href="#Anushka">Crunches</a></li>
+								<li><a href="../index.html">Go Back</a></li>
+
 							
 								
 							</ul>
