--- a/subIndex/meditate.html
+++ b/subIndex/meditate.html
@@ -45,6 +45,8 @@
                                 <li><a href="#abot">Importance</a></li>
 								<li><a href="#wok">Meditate</a></li>
 								<li><a href="#fac">Music</a></li>
+								<li><a href="../index.html">Go Back</a></li>
+
 
 								
 							</ul>
