--- a/subIndex/yoga.html
+++ b/subIndex/yoga.html
@@ -46,11 +46,12 @@
 								<li><a href="#kon">Konasana</a></li>
 								<li><a href="#bal">Balasana</a></li>
 								<li><a href="#bhu">Bhujangasana</a></li>
-                                <li><a href="#sha">Savasana</a></li>
+                                				<li><a href="#sha">Savasana</a></li>
 								<li><a href="#tad">Tadasana</a></li>
 								<li><a href="#tri">Trinkoasana</a></li>
 								<li><a href="#utk">Utkatasana</a></li>
 								<li><a href="#vri">Vrikshasana</a></li>
+								<li><a href="../index.html">Go Back</a></li>
 
 								
 							</ul>
