--- a/subIndex/zumba.html
+++ b/subIndex/zumba.html
@@ -113,8 +113,8 @@
 											<!-- Fac -->
 											<article id="fac">
 												<h2><center><u>Zumba!</u></center></h2>
-												<video src="images/v1.mp4" width="100%" controls loop autoplay>
-												</video>
+												<iframe width="100%" height="200" src="https://www.youtube.com/embed/kuDJ1PjtcyI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 													<p>And that's some Zumba For You!</p>
 											</article>
 						<!-- Vac -->
