--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						
 						<div class="content">
 							<div class="inner">
-								<h1>FITNESS+</h1>
+								<h1>HEALTH+</h1>
 								<p>The Pain Today Will Give You The Strength Tommrow
 									</p>
 
