--- a/subIndex/exercise.html
+++ b/subIndex/exercise.html
@@ -34,7 +34,7 @@
 						
 						<div class="content">
 							<div class="inner">
-								<h1>FITNESS+ EXERCISE</h1>
+								<h1>HEALTH+ EXERCISE</h1>
 								<p>Exercise Is Just Like Marriage, You Can't Cheat On It And Expect It To Work
 									</p>
 
