--- a/subIndex/meditate.html
+++ b/subIndex/meditate.html
@@ -34,7 +34,7 @@
 						
 						<div class="content">
 							<div class="inner">
-								<h1>FITNESS+ MEDITATION</h1>
+								<h1>HEALTH+ MEDITATION</h1>
 								<p>Quiet Your Mind, The Soul will speak
 									</p>
 
