--- a/subIndex/yoga.html
+++ b/subIndex/yoga.html
@@ -34,7 +34,7 @@
 						
 						<div class="content">
 							<div class="inner">
-								<h1>FITNESS+ YOGA</h1>
+								<h1>HEALTH+ YOGA</h1>
 								<p>The Journey Of The Self, Through The Self, To The Self 
 									</p>
 
