--- a/subIndex/zumba.html
+++ b/subIndex/zumba.html
@@ -34,7 +34,7 @@
 						
 						<div class="content">
 							<div class="inner">
-								<h1>FITNESS+ ZUMBA</h1>
+								<h1>HEALTH+ ZUMBA</h1>
 								<p>It's Fun! It's Fitness! It's Zumba!
 									</p>
 
